// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source maps css-object 1`] = `
"import css from '@emotion/css'

css({ color: 'hotpink' })


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
} : {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFFQSIsImZpbGUiOiJzb3VyY2UtbWFwLnRlc3QuanMiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgY3NzIGZyb20gJ0BlbW90aW9uL2NzcydcblxuY3NzKHsgY29sb3I6ICdob3RwaW5rJyB9KVxuIl19 */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
};"
`;

exports[`source maps css-prop 1`] = `
"/** @jsx jsx */
import { jsx } from '@emotion/core'

const SomeComponent = props => <div css={{ color: 'hotpink' }} {...props} />


      ↓ ↓ ↓ ↓ ↓ ↓

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

/** @jsx jsx */
import { jsx } from '@emotion/core';

var _ref = process.env.NODE_ENV === \\"production\\" ? {
  name: \\"zszx19-SomeComponent\\",
  styles: \\"color:hotpink;;label:SomeComponent;\\"
} : {
  name: \\"zszx19-SomeComponent\\",
  styles: \\"color:hotpink;;label:SomeComponent;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFHb0MiLCJmaWxlIjoic291cmNlLW1hcC50ZXN0LmpzIiwic291cmNlc0NvbnRlbnQiOlsiLyoqIEBqc3gganN4ICovXG5pbXBvcnQgeyBqc3ggfSBmcm9tICdAZW1vdGlvbi9jb3JlJ1xuXG5jb25zdCBTb21lQ29tcG9uZW50ID0gcHJvcHMgPT4gPGRpdiBjc3M9e3sgY29sb3I6ICdob3RwaW5rJyB9fSB7Li4ucHJvcHN9IC8+XG4iXX0= */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
};

const SomeComponent = props => <div css={_ref} {...props} />;"
`;

exports[`source maps css-prop-dynamic 1`] = `
"/** @jsx jsx */
import { jsx } from '@emotion/core'

const SomeComponent = props => (
  <div
    css={{
      backgroundColor: window.something
    }}
    {...props}
  />
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

/** @jsx jsx */
import { jsx } from '@emotion/core';

const SomeComponent = props => <div css={
/*#__PURE__*/
_css({
  backgroundColor: window.something
}, \\";label:SomeComponent;\\" + (process.env.NODE_ENV === \\"production\\" ? \\"\\" : \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFLSSIsImZpbGUiOiJzb3VyY2UtbWFwLnRlc3QuanMiLCJzb3VyY2VzQ29udGVudCI6WyIvKiogQGpzeCBqc3ggKi9cbmltcG9ydCB7IGpzeCB9IGZyb20gJ0BlbW90aW9uL2NvcmUnXG5cbmNvbnN0IFNvbWVDb21wb25lbnQgPSBwcm9wcyA9PiAoXG4gIDxkaXZcbiAgICBjc3M9e3tcbiAgICAgIGJhY2tncm91bmRDb2xvcjogd2luZG93LnNvbWV0aGluZ1xuICAgIH19XG4gICAgey4uLnByb3BzfVxuICAvPlxuKVxuIl19 */\\"))} {...props} />;"
`;

exports[`source maps css-string 1`] = `
"import css from '@emotion/css'

css\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
} : {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFFRyIsImZpbGUiOiJzb3VyY2UtbWFwLnRlc3QuanMiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgY3NzIGZyb20gJ0BlbW90aW9uL2NzcydcblxuY3NzYFxuICBjb2xvcjogaG90cGluaztcbmBcbiJdfQ== */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
};"
`;

exports[`source maps css-transpiled-by-ts 1`] = `
"import { __makeTemplateObject } from 'tslib'
import css from '@emotion/css'

var templateObject_1

css(
  templateObject_1 ||
    (templateObject_1 = __makeTemplateObject(
      ['\\\\n  color: hotpink;\\\\n'],
      ['\\\\n  color: hotpink;\\\\n']
    ))
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

var _emotionSourceMap = process.env.NODE_ENV === \\"production\\" ? \\"\\" : \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFLQSIsImZpbGUiOiJzb3VyY2UtbWFwLnRlc3QuanMiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgeyBfX21ha2VUZW1wbGF0ZU9iamVjdCB9IGZyb20gJ3RzbGliJ1xuaW1wb3J0IGNzcyBmcm9tICdAZW1vdGlvbi9jc3MnXG5cbnZhciB0ZW1wbGF0ZU9iamVjdF8xXG5cbmNzcyhcbiAgdGVtcGxhdGVPYmplY3RfMSB8fFxuICAgICh0ZW1wbGF0ZU9iamVjdF8xID0gX19tYWtlVGVtcGxhdGVPYmplY3QoXG4gICAgICBbJ1xcbiAgY29sb3I6IGhvdHBpbms7XFxuJ10sXG4gICAgICBbJ1xcbiAgY29sb3I6IGhvdHBpbms7XFxuJ11cbiAgICApKVxuKVxuIl19 */\\";

import { __makeTemplateObject } from 'tslib';
var templateObject_1;

/*#__PURE__*/
_css(templateObject_1 || (templateObject_1 = __makeTemplateObject(['\\\\n  color: hotpink;\\\\n' + _emotionSourceMap], ['\\\\n  color: hotpink;\\\\n' + _emotionSourceMap])));"
`;

exports[`source maps css-transpiled-by-ts-with-interpolations 1`] = `
"import { __makeTemplateObject } from 'tslib'
import css from '@emotion/css'
import { hoverStyles } from './styles'

var templateObject_1

css(
  templateObject_1 ||
    (templateObject_1 = __makeTemplateObject(
      ['\\\\n  color: hotpink;\\\\n'],
      ['\\\\n  color: hotpink;\\\\n']
    )),
  hoverStyles
)


      ↓ ↓ ↓ ↓ ↓ ↓

import _css from \\"@emotion/css\\";

var _emotionSourceMap = process.env.NODE_ENV === \\"production\\" ? \\"\\" : \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFNQSIsImZpbGUiOiJzb3VyY2UtbWFwLnRlc3QuanMiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgeyBfX21ha2VUZW1wbGF0ZU9iamVjdCB9IGZyb20gJ3RzbGliJ1xuaW1wb3J0IGNzcyBmcm9tICdAZW1vdGlvbi9jc3MnXG5pbXBvcnQgeyBob3ZlclN0eWxlcyB9IGZyb20gJy4vc3R5bGVzJ1xuXG52YXIgdGVtcGxhdGVPYmplY3RfMVxuXG5jc3MoXG4gIHRlbXBsYXRlT2JqZWN0XzEgfHxcbiAgICAodGVtcGxhdGVPYmplY3RfMSA9IF9fbWFrZVRlbXBsYXRlT2JqZWN0KFxuICAgICAgWydcXG4gIGNvbG9yOiBob3RwaW5rO1xcbiddLFxuICAgICAgWydcXG4gIGNvbG9yOiBob3RwaW5rO1xcbiddXG4gICAgKSksXG4gIGhvdmVyU3R5bGVzXG4pXG4iXX0= */\\";

import { __makeTemplateObject } from 'tslib';
import { hoverStyles } from './styles';
var templateObject_1;

/*#__PURE__*/
_css(templateObject_1 || (templateObject_1 = __makeTemplateObject(['\\\\n  color: hotpink;\\\\n' + _emotionSourceMap], ['\\\\n  color: hotpink;\\\\n' + _emotionSourceMap])), hoverStyles);"
`;

exports[`source maps styled-object 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled.div({
  color: 'hotpink'
})


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

const SomeComponent = _styled(\\"div\\", {
  target: \\"eb28ebz0\\",
  label: \\"SomeComponent\\"
})(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
} : {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFFc0IiLCJmaWxlIjoic291cmNlLW1hcC50ZXN0LmpzIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHN0eWxlZCBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5cbmNvbnN0IFNvbWVDb21wb25lbnQgPSBzdHlsZWQuZGl2KHtcbiAgY29sb3I6ICdob3RwaW5rJ1xufSlcbiJdfQ== */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;

exports[`source maps styled-string 1`] = `
"import styled from '@emotion/styled'

const SomeComponent = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

function _EMOTION_STRINGIFIED_CSS_ERROR__() { return \\"You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop).\\"; }

const SomeComponent = _styled(\\"div\\", {
  target: \\"eb28ebz0\\",
  label: \\"SomeComponent\\"
})(process.env.NODE_ENV === \\"production\\" ? {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\"
} : {
  name: \\"1lrxbo5\\",
  styles: \\"color:hotpink;\\",
  map: \\"/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInNvdXJjZS1tYXAudGVzdC5qcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFFZ0MiLCJmaWxlIjoic291cmNlLW1hcC50ZXN0LmpzIiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHN0eWxlZCBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5cbmNvbnN0IFNvbWVDb21wb25lbnQgPSBzdHlsZWQuZGl2YFxuICBjb2xvcjogaG90cGluaztcbmBcbiJdfQ== */\\",
  toString: _EMOTION_STRINGIFIED_CSS_ERROR__
});"
`;
